# cpp_dangerroom

./: .gitmodules  README.md
ansi_c/: pass_string.c
arrays/: CMakeLists.txt  array_convert.cpp
asserts/: README.md  try_assert.cpp
data_pointers/: CMakeLists.txt  README.md  data_pointer.cpp~  data_pointers
data_pointers/data_pointer/: data_pointer.cpp
data_pointers/smart_pointers/: CMakeLists.txt  README.md  pass_pointers.cpp  shared_ptr_tests.cpp
data_pointers/smart_pointers/shared_ptr_struct/: sh_ptr.cpp
data_pointers/vector_kdtree/: vector_kdtree.cpp
example/: README.md  danger.cpp
graphics/: CMakeLists.txt  README.md
graphics/cmake_functions/: AddShaders.cmake
graphics/glslc_cmake/: CMakeLists.txt
graphics/glslc_cmake/src/: CMakeLists.txt  hello.frag
graphics/resources/: README.md  blur_shader.glsl  vertex_shader.glsl
graphics/sdl3_00_cmake/: CMakeLists.txt
graphics/sdl3_00_cmake/src/: CMakeLists.txt  main.cpp
graphics/sdl3_01_clear/: CMakeLists.txt
graphics/sdl3_01_clear/src/: CMakeLists.txt  main.cpp
graphics/sdl3_02_blur/: CMakeLists.txt
graphics/sdl3_02_blur/src/: CMakeLists.txt  main.cpp
graphics/sdl3_02_primatives/: CMakeLists.txt
graphics/sdl3_02_primatives/src/: main.cpp
graphics/sdl3_02_primitives/: CMakeLists.txt
graphics/sdl3_02_primitives/src/: main.cpp
graphics/sdl3_cmake/: CMakeLists.txt
graphics/sdl3_cmake/src/: .main.cpp.swp
graphics/sdl_gpu_00_dev_prop/: CMakeLists.txt
graphics/sdl_gpu_00_dev_prop/src/: main.cpp
graphics/sdl_gpu_01_triangle/: CMakeLists.txt
graphics/sdl_gpu_01_triangle/src/: CMakeLists.txt  main.cpp  triangle.frag
hello_cmake/: CMakeLists.txt  hello.cpp
member_pointers/: member_pointer.cpp  pointer_to_function.cpp  scheduler_callback.cpp
move_vector/: CMakeLists.txt  README.md  move_vector.cpp  move_vector.h  move_vector_sh.cpp  move_vector_sh.h
mystery/mystery1/: README.md  mystery.cpp
openmp/: CMakeLists.txt  simple_omp.cpp  vector_omp.cpp  vector_omp_simd.cpp
puzzlers/sample/: sample_lifetime1.cpp
python_interop/: CMakeLists.txt
python_interop/numpy_interop/: README.md
python_interop/python_basics/: CMakeLists.txt  README.md  python_basics.cpp
scientific_cpp/chapter1/: Makefile  Makefile~  euclidean_norm.cpp  euclidean_norm.cpp~  hello_world.cpp  hello_world.cpp~  prob1  prob2  prob3  product.cpp  product.cpp~
scientific_cpp/chapter5/cuberoot/: Makefile  cuberoot.cpp  cuberoot.h  cuberoot_main.cpp
small_data/test/: simple_test  simple_test.cpp  simple_test.cpp~  twice.cpp~  twice.h
stl_tricks/: CMakeLists.txt  vector_split.cpp
stl_tricks/filter/: CMakeLists.txt  filter_node_vector.cpp  filter_vector.cpp
string_manipulation/: reverse_string.cpp
structs/: README.md  main.cpp  mystructs.h
templates/: CMakeLists.txt  template_function.cpp  template_function.h
typeid/: CMakeLists.txt  types_test.cpp
unistd/: CMakeLists.txt  mypwd.cpp
